# My_C_Exercises

./: CMakeLists.txt  README.md
exercise_2_1/: exercise_2_1.c  exercise_2_1.md
exercise_2_2/: exercise_2_2.c  exercise_2_2.md
exercise_2_3/: exercise_2_3.c  exercise_2_3.md
exercise_2_4/: exercise_2_3.md  exercise_2_4.c
exercise_2_5/: exercise_2_5.c  exercise_2_5.md
exercise_2_6/: exercise_2_6.c  exercise_2_6.md
exercise_5_1/: exercise_5_1.c  exercise_5_1.md
exercise_5_2/: exercise_5_2.c  readme.md
exercise_5_3/: exercise_5_3.c  readme.md
exercise_6_1/: exercise_6_1.c  readme.md
exercise_6_2/: exercise_6_2.c  readme.md
exercise_6_3/: exercise_6_3.c  readme.md
exercise_7_1/: exercise_7_1.c  readme.md
exercise_7_2/: exercise_7_2.c  readme.md
exercise_7_3/: exercise_7_3.c  readme.md
exercise_8_1/: exercise_8_1.c  readme.md
exercise_8_2/: exercise_8_2.c  readme.md
exercise_9_1/: readme.md
exercise_9_2/: readme.md
exercise_9_3/: readme.md
