cmake_minimum_required(VERSION 3.29)
project(My_C_Exercises C)

set(CMAKE_C_STANDARD 11)

add_executable(My_C_Exercises
    exercise_2_1/exercise_2_1.c
        exercise_2_2/exercise_2_2.c
        exercise_9_3/exercise_9_3.c
        exercise_5_2/exercise_5_2.c
        exercise_6_1/exercise_6_1.c)

add_executable(exercise_2_2 exercise_2_2/exercise_2_2.c
        exercise_9_3/exercise_9_3.c
        exercise_5_2/exercise_5_2.c
        exercise_6_1/exercise_6_1.c)
add_executable(single_file_exe exercise_2_2/exercise_2_2.c
        exercise_9_3/exercise_9_3.c
        exercise_5_2/exercise_5_2.c
        exercise_6_1/exercise_6_1.c)
add_executable(exercise_2_1 exercise_2_1/exercise_2_1.c
        exercise_9_3/exercise_9_3.c
        exercise_5_2/exercise_5_2.c
        exercise_6_1/exercise_6_1.c)
add_executable(exercise_2_4 exercise_2_4/exercise_2_4.c
        exercise_9_3/exercise_9_3.c
        exercise_5_2/exercise_5_2.c
        exercise_6_1/exercise_6_1.c)
add_executable(exercise_2_3 exercise_2_3/exercise_2_3.c
        exercise_9_3/exercise_9_3.c
        exercise_5_2/exercise_5_2.c
        exercise_6_1/exercise_6_1.c)
add_executable(exercise_2_5 exercise_2_5/exercise_2_5.c
        exercise_9_3/exercise_9_3.c
        exercise_5_2/exercise_5_2.c
        exercise_6_1/exercise_6_1.c)
add_executable(exercise_2_6 exercise_2_6/exercise_2_6.c
        exercise_9_3/exercise_9_3.c
        exercise_5_2/exercise_5_2.c
        exercise_6_1/exercise_6_1.c)
add_executable(exercise_5_1 exercise_5_1/exercise_5_1.c
        exercise_9_3/exercise_9_3.c
        exercise_5_2/exercise_5_2.c
        exercise_6_1/exercise_6_1.c)
add_executable(exercise_9_3 exercise_9_3/exercise_9_3.c
        exercise_9_3/exercise_9_3.c
        exercise_5_2/exercise_5_2.c
        exercise_6_1/exercise_6_1.c)
add_executable(exercise_6_3 exercise_6_3/exercise_6_3.c
        exercise_9_3/exercise_9_3.c
        exercise_5_2/exercise_5_2.c
        exercise_6_1/exercise_6_1.c)
add_executable(exercise_7_1 exercise_7_1/exercise_7_1.c
        exercise_9_3/exercise_9_3.c
        exercise_5_2/exercise_5_2.c
        exercise_6_1/exercise_6_1.c)
add_executable(exercise_7_2 exercise_7_2/exercise_7_2.c
        exercise_9_3/exercise_9_3.c
        exercise_5_2/exercise_5_2.c
        exercise_6_1/exercise_6_1.c)
add_executable(exercise_7_3 exercise_7_3/exercise_7_3.c
        exercise_9_3/exercise_9_3.c
        exercise_5_2/exercise_5_2.c
        exercise_6_1/exercise_6_1.c)
add_executable(exercise_8_1 exercise_8_1/exercise_8_1.c
        exercise_9_3/exercise_9_3.c
        exercise_5_2/exercise_5_2.c
        exercise_6_1/exercise_6_1.c)
add_executable(exercise_8_2 exercise_8_2/exercise_8_2.c
        exercise_9_3/exercise_9_3.c
        exercise_5_2/exercise_5_2.c
        exercise_6_1/exercise_6_1.c)
add_executable(exercise_9_1 exercise_9_1/exercise_9_1.c
        exercise_9_3/exercise_9_3.c
        exercise_5_2/exercise_5_2.c
        exercise_6_1/exercise_6_1.c)
add_executable(exercise_9_2 exercise_9_2/exercise_9_2.c
        exercise_9_3/exercise_9_3.c
        exercise_5_2/exercise_5_2.c
        exercise_6_1/exercise_6_1.c)
add_executable(exercise_5_2 exercise_5_2/exercise_5_2.c
        exercise_6_1/exercise_6_1.c)
add_executable(exercise_5_3 exercise_5_3/exercise_5_3.c
        exercise_6_1/exercise_6_1.c)
add_executable(exercise_6_1 exercise_6_1/exercise_6_1.c)
add_executable(exercise_6_2 exercise_6_2/exercise_6_2.c)